[package]
name = "pomors"
version = "0.1.0"
authors = ["caio <caio.marcelo@assistatecnologia.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust="4"
toml="0.5"
serde = { version = "1.0.117", features = [ "derive" ] }
dirs = "3.0"
log = "0.4.11"
env_logger = "0.8.1"
